@@ -1,3 +1,8 @@
+2005-02-24 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* redistribute.c: (zebra_check_addr,is_default,
+	  zebra_redistribute_default,zebra_redistribute) Fix scope to be static.
+
 2005-02-20 Hasso Tepper <hasso at quagga.net>
 
 	* rt_netlink.c: Don't show messages "ignoring message type 0x001[89]"
